--- a/CardsLandingPage/Pages/Dashboard.cshtml
+++ b/CardsLandingPage/Pages/Dashboard.cshtml
@@ -3,7 +3,6 @@
 @{
     ViewData["Title"] = "Index";
 }
-
 <div class="Dashboard-container">
    <aside>
        <div class="top">
@@ -12,22 +11,22 @@
                 <h2>Ca<span class="danger">rds</span></h2>
            </div>
             <div class="close" id="close-btn">
-                <span class="fa fa-window-close"></span>
+                <span class="fa fa-close"></span>
             </div>
         </div>
 
-            <div class="sidebar">
-                <a href="#">
+            <div class="sidebar" >
+                <a href="#" class="active" data-tab-target="#dashboard">
                     <span class="fa fa-dashboard"></span>
                     <h3>Dashboard</h3>
                 </a>
 
-                <a href="#">
+            <a href="#" data-tab-target="#orders">
                     <span class="fa-solid fa-cart-shopping"></span>
                     <h3>Orders</h3>
                 </a>
 
-                <a href="#" class="active">
+            <a href="#" data-tab-target>
                     <span class="fa-solid fa-business-time"></span>
                     <h3>Analytics</h3>
                 </a>
@@ -38,27 +37,27 @@
                     <span class="message-count">27</span>
                 </a>
 
-                <a href="#">
+            <a href="#">
                     <span class="fa-solid fa-weight-hanging"></span>
-                    <h3>Products</h3>
+                    <h3>Shop</h3>
                 </a>
 
-                <a href="#">
+            <a href="#">
                     <span class="fa fa-file"></span>
                     <h3>Reports</h3>
                 </a>
 
-                <a href="#">
+            <a href="#">
                     <span class="fa-solid fa-user-gear"></span>
                     <h3>Settings</h3>
                 </a>
 
-                <a href="#">
+            <a href="#">
                     <span class="fa fa-plus"></span>
                     <h3>Add Product</h3>
                 </a>
 
-                <a href="#">
+            <a href="#">
                     <span class="fa fa-sign-out"></span>
                     <h3>Logout</h3>
                 </a>
@@ -67,17 +66,17 @@
        
    </aside>
 
+    <div id="dashboard" data-tab-content>
    <!--End Of Sidebar aside Section-->
-
-   <main>
+    <main>
        <h1>Dashboard</h1>
        <div class="date">
-           <input type="date" />
+           <input type="date"/>
        </div>
 
        <div class="insights">
            <div class="sales">
-               <span class="fa fa-chart-bar"></span>
+               
                <div class="middle">
                    <div class="left">
                        <h3>Total Sales</h3>
@@ -99,7 +98,6 @@
            <!--End of Sales-->
 
             <div class="expenses">
-                <span class="fa fa-chart-simple"></span>
                 <div class="middle">
                     <div class="left">
                         <h3>Total Expenses</h3>
@@ -121,7 +119,6 @@
             <!--End of Expenses-->
 
             <div class="income">
-                <span class="fas fa-chart-line chart-icon"></span>
                 <div class="middle">
                     <div class="left">
                         <h3>Total Income</h3>
@@ -212,9 +209,12 @@
 
    <div class="right">
         <div class="top">
-            <button id="menu-btn" class="fa fa-bars button">
+            <div class="close" id="menu-btn">
+
+            <div class="fa fa-bars button">
                  
-            </button>
+            </div>
+            </div>
             <div class="theme-toggler">
                 <span class="fa fa-sun toggle active"></span>
                 <span class="fa fa-moon toggle"></span>
@@ -277,7 +277,7 @@
             <h2>Sales Analytics</h2>
             <div class="items online">
                 <div class="icon">
-                    <span class="fa fa-shopping-cart"></span>
+                    <span class="fa fa-shopping-cart cart-icon"></span>
                 </div>
 
                 <div class="right">
@@ -330,6 +330,13 @@
 
         </div>
 
-   </div>
+    </div>
 
+    <div id="orders" data-tab-content>
+        <main>
+            <h1>Stuff</h1>
+        </main>
+    </div>
+
+   </div>
 
