--- a/CardsLandingPage/Pages/Dashboard.cshtml
+++ b/CardsLandingPage/Pages/Dashboard.cshtml
@@ -8,7 +8,7 @@
        <div class="top">
            <div class="logo">
                 <img src="~/fonts/svgs/home.svg"/> 
-                <h2>Ca<span class="danger">rds</span></h2>
+                <h2>Micro<span class="danger">Serve</span></h2>
            </div>
             <div class="close" id="close-btn">
                 <span class="fa fa-close"></span>
@@ -16,38 +16,38 @@
         </div>
 
             <div class="sidebar" >
-                <a href="#" class="active" data-tab-target="#dashboard">
+                <a class="active" data-tab-target="#dashboard">
                     <span class="fa fa-dashboard"></span>
                     <h3>Dashboard</h3>
                 </a>
 
-            <a href="#" data-tab-target="#orders">
+            <a href="#" data-tab-target="#shop">
                     <span class="fa-solid fa-cart-shopping"></span>
-                    <h3>Orders</h3>
+                    <h3>Shop</h3>
                 </a>
 
-            <a href="#" data-tab-target>
+            <a href="#" data-tab-target="#analytics">
                     <span class="fa-solid fa-business-time"></span>
                     <h3>Analytics</h3>
                 </a>
 
-                <a href="#" >
+                <a href="#" data-tab-target="#messages">
                     <span class="fa-solid fa-message"></span>
                     <h3>Messages</h3>
                     <span class="message-count">27</span>
                 </a>
 
-            <a href="#">
+            <a href="#" data-tab-target="#orders">
                     <span class="fa-solid fa-weight-hanging"></span>
-                    <h3>Shop</h3>
+                    <h3>Orders</h3>
                 </a>
 
-            <a href="#">
+            <a href="#" data-tab-target="#reports">
                     <span class="fa fa-file"></span>
                     <h3>Reports</h3>
                 </a>
 
-            <a href="#">
+            <a href="#" data-tab-target="#settings">
                     <span class="fa-solid fa-user-gear"></span>
                     <h3>Settings</h3>
                 </a>
@@ -57,7 +57,7 @@
                     <h3>Add Product</h3>
                 </a>
 
-            <a href="#">
+            <a href="/">
                     <span class="fa fa-sign-out"></span>
                     <h3>Logout</h3>
                 </a>
@@ -66,7 +66,7 @@
        
    </aside>
 
-    <div id="dashboard" data-tab-content>
+    <div id="dashboard" data-tab-content class="active">
    <!--End Of Sidebar aside Section-->
     <main>
        <h1>Dashboard</h1>
@@ -277,7 +277,7 @@
             <h2>Sales Analytics</h2>
             <div class="items online">
                 <div class="icon">
-                    <span class="fa fa-shopping-cart cart-icon"></span>
+                    <span class="fa fa-shopping-cart"></span>
                 </div>
 
                 <div class="right">
@@ -332,11 +332,256 @@
 
     </div>
 
-    <div id="orders" data-tab-content>
+    <!--Shop Tab-->
+    <div id="shop" data-tab-content>
         <main>
-            <h1>Stuff</h1>
+            <div class="shop-container">
+                <div class="deal-container shop-item">
+                    <h1>Deal of the Day</h1>
+                    <div class="description">
+                        <h1>Description</h1>
+                        <div class="right">
+                            <h1>img</h1>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="product-item-container">
+
+                    @foreach(var data in Model.shoes)
+                    {
+                        <div class="product-card shop-item product-item">
+                            <h1>@data.name</h1>
+                            <h1>@data.price</h1>
+                            <h1>@data.shopName</h1>
+
+                           
+                            </div>                       
+                    }                    
+
+                </div>
+                
+            </div>
+
+            <!--End of deal container -->
+            
+
         </main>
+
+
+        <!--Top Section-->
+
+        <!--Right Section-->
+        <div class="right">
+            <div class="top">
+                <div class="close menu-button">
+
+                    <div class="fa fa-bars">
+                    </div>
+                </div>
+                <div class="theme-toggler">
+                    <span class="fa fa-sun toggle active"></span>
+                    <span class="fa fa-moon toggle"></span>
+                </div>
+
+                <div class="profile">
+                    <div class="info">
+                        <p>Hey <b>Lewis</b></p>
+
+                    </div>
+                    <div class="profile-photo">
+                        <img src="~/Images/Food.jpg" alt="profile photo" />
+                    </div>
+
+                </div>
+            </div>
+
+
+            <div class="payment-method-continer">
+                <div class="payment-card ">Card</div>
+                <div class="items payment-card">
+                    <div class="icon">
+                        <span class="fa fa-plus"></span>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+
     </div>
+
+
+    <!--Messages Tab-->
+    <div  id="messages" data-tab-content>
+        <main>
+            <div class="messages-container">
+                <div class="active-users">
+
+                </div>
+                <div class="active-messaging"></div>
+                <div class="message-actions">
+                    <form>
+                        <input type="text" placeholder="Message" name="add-text" />
+                        <input type="submit" value="submit" class="fa fa-arrow-circle-up" />
+                    </form> 
+                </div>
+            </div>
+        </main>
+
+        <div class="right">
+            <div class="top">
+                <div class="close" id="menu-btn">
+
+                    <div class="fa fa-bars button">
+                    </div>
+                </div>
+                <div class="theme-toggler">
+                    <span class="fa fa-sun toggle active"></span>
+                    <span class="fa fa-moon toggle"></span>
+                </div>
+
+                <div class="profile">
+                    <div class="info">
+                        <p>Hey <b>Lewis</b></p>
+
+                    </div>
+                    <div class="profile-photo">
+                        <img src="~/Images/Food.jpg" alt="profile photo" />
+                    </div>
+
+                </div>
+            </div>
+            </div>
+
+    </div>
+
+
+    <!--Analytics Tab-->
+    <div id="analytics" data-tab-content>
+        <main>Analytics Tab</main>
+
+        <div class="right">
+            <div class="top">
+                <div class="close" id="menu-btn">
+
+                    <div class="fa fa-bars button">
+                    </div>
+                </div>
+                <div class="theme-toggler">
+                    <span class="fa fa-sun toggle active"></span>
+                    <span class="fa fa-moon toggle"></span>
+                </div>
+
+                <div class="profile">
+                    <div class="info">
+                        <p>Hey <b>Lewis</b></p>
+
+                    </div>
+                    <div class="profile-photo">
+                        <img src="~/Images/Food.jpg" alt="profile photo" />
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <!--Orders Tab-->
+    <div id="orders" data-tab-content>
+        <main>Orders Tab</main>
+
+        <div class="right">
+            <div class="top">
+                <div class="close" id="menu-btn">
+
+                    <div class="fa fa-bars button">
+                    </div>
+                </div>
+                <div class="theme-toggler">
+                    <span class="fa fa-sun toggle active"></span>
+                    <span class="fa fa-moon toggle"></span>
+                </div>
+
+                <div class="profile">
+                    <div class="info">
+                        <p>Hey <b>Lewis</b></p>
+
+                    </div>
+                    <div class="profile-photo">
+                        <img src="~/Images/Food.jpg" alt="profile photo" />
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <!--Reports Tab-->
+    <div id="reports" data-tab-content>
+        <main>Reports Tab</main>
+
+        <div class="right">
+            <div class="top">
+                <div class="close" id="menu-btn">
+
+                    <div class="fa fa-bars button">
+                    </div>
+                </div>
+                <div class="theme-toggler">
+                    <span class="fa fa-sun toggle active"></span>
+                    <span class="fa fa-moon toggle"></span>
+                </div>
+
+                <div class="profile">
+                    <div class="info">
+                        <p>Hey <b>Lewis</b></p>
+
+                    </div>
+                    <div class="profile-photo">
+                        <img src="~/Images/Food.jpg" alt="profile photo" />
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <!--Settings Tab-->
+     <div id="settings" data-tab-content>
+         <main>Settings Tab</main>
+
+        <div class="right">
+            <div class="top">
+                <div class="close" id="menu-btn">
+
+                    <div class="fa fa-bars button">
+                    </div>
+                </div>
+                <div class="theme-toggler">
+                    <span class="fa fa-sun toggle active"></span>
+                    <span class="fa fa-moon toggle"></span>
+                </div>
+
+                <div class="profile">
+                    <div class="info">
+                        <p>Hey <b>Lewis</b></p>
+
+                    </div>
+                    <div class="profile-photo">
+                        <img src="~/Images/Food.jpg" alt="profile photo" />
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+     </div>
+
 
    </div>
 
