--- a/CardsLandingPage/Pages/Shared/_Layout.cshtml
+++ b/CardsLandingPage/Pages/Shared/_Layout.cshtml
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/CardsLandingPage.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/fonts/fontawesome-free-6.4.2-web/css/all.css" />
+    <link rel="stylesheet" href="/css/shop1.css" />
+    <link rel="stylesheet" href="/css/loginSignup.css" />
 </head>
 <body>
 
